--- a/server/ffn.env
+++ b/server/ffn.env
@@ -1,8 +1,8 @@
 #서버 옵션
-Server_ip = '15.164.120.162'
-Access_user_id = 'user1'
-Access_user_pw = '1234'
-DB_name = 'ffn'
+Server_ip = '0.0.0.0' #scret
+Access_user_id = 'administrator' #scret
+Access_user_pw = '0' #scret
+DB_name = 'your_db_name' #scret
 
 #얼굴 인식1
 face_cascader = "haarcascade_frontalface_default.xml"
